Microsite video page, YouTube option. Remington safari detection bug

--- a/wp-content/themes/imo-mags-parent/css/microsite-css/microsite-default.css
+++ b/wp-content/themes/imo-mags-parent/css/microsite-css/microsite-default.css
@@ -1492,6 +1492,7 @@ h1, h2, h3, h4, h5 {
 	background-size: cover;
 	background-color: #333;
 	background-repeat: no-repeat;
+	background-position: center center;
 }
 .mv-video-thumb i {
 	position: absolute;
